feat: add Firebase authentication service and API configuration
- Added Firebase dependency to package.json.
- Removed reset-project script as it is no longer needed.
- Created authService to handle user registration, login, and logout using Firebase.
- Added API configuration file using axios for making HTTP requests.

--- a/app.json
+++ b/app.json
@@ -37,6 +37,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "271801c8-c49c-4008-8b65-41dbc8d8704a"
+      }
+    },
+    "owner": "harshana_47"
   }
 }
