--- a/app.json
+++ b/app.json
@@ -16,7 +16,12 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyA4JYTXPnur3tpF2S7OI1gQyo1lWoXVbA4"
+        }
+      }
     },
     "web": {
       "bundler": "metro",
