--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-router": "5.3",
-    "react-router-dom": "5.3"
+    "react-router-dom": "5.3",
+    "expo-media-library": "~17.1.7",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
