--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "dotenv": "^17.2.1",
-    "expo": "~53.0.22",
+    "expo": "53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
@@ -52,7 +52,8 @@
     "react-router": "5.3",
     "react-router-dom": "5.3",
     "expo-media-library": "~17.1.7",
-    "expo-image-picker": "~16.1.4"
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
