--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "dotenv": "^17.2.1",
-    "expo": "53.0.22",
+    "expo": "^54.0.6",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-location": "~18.1.6",
+    "expo-media-library": "~17.1.7",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -50,10 +53,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-router": "5.3",
-    "react-router-dom": "5.3",
-    "expo-media-library": "~17.1.7",
-    "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.5"
+    "react-router-dom": "5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.28.3",
