--- a/package.json
+++ b/package.json
@@ -55,11 +55,12 @@
     "react-router": "5.3",
     "react-router-dom": "5.3",
     "react-native-svg": "15.12.1",
-    "@expo/metro-runtime": "~6.1.2"
+    "@expo/metro-runtime": "~6.1.2",
+    "expo-updates": "~29.0.10"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.20",
-  "@types/react": "~19.1.10",
+    "@types/react": "~19.1.10",
     "@types/react-router-dom": "5.3",
     "babel-preset-expo": "~54.0.0",
     "eslint": "^9.25.0",
