--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 EXPO_BASE_API_URL=https://689db598ce755fe69789a2df.mockapi.io/api/v1
+EXPO_PUBLIC_GCV_API_KEY=AIzaSyA4JYTXPnur3tpF2S7OI1gQyo1lWoXVbA4
