--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -18,6 +19,7 @@
     "dotenv": "^17.2.1",
     "expo": "^54.0.6",
     "expo-blur": "~15.0.7",
+    "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.8",
     "expo-dev-client": "~6.0.12",
     "expo-font": "~14.0.8",
@@ -33,6 +35,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.10",
     "expo-web-browser": "~15.0.7",
     "firebase": "^12.2.1",
     "firebase-functions": "^6.4.0",
@@ -50,17 +53,16 @@
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-router": "5.3",
-    "react-router-dom": "5.3",
-    "react-native-svg": "15.12.1",
-    "@expo/metro-runtime": "~6.1.2",
-    "expo-updates": "~29.0.10"
+    "react-router-dom": "5.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.20",
     "@types/react": "~19.1.10",
+    "@types/react-native": "^0.72.8",
     "@types/react-router-dom": "5.3",
     "babel-preset-expo": "~54.0.0",
     "eslint": "^9.25.0",
