--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-router": "5.3",
-    "react-router-dom": "5.3"
+    "react-router-dom": "5.3",
+    "expo-image-manipulator": "~14.0.7"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.20",
